# letz

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: letzortho-rules.txt
scripts/: letz-alias
src/letz/: __init__.py  cli.py  llm_context.py  lod.py  normalizer.py  rules.py  spellchecker.py
tests/: conftest.py  test_llm_context.py  test_lod.py  test_normalizer.py  test_rules.py  test_spellchecker.py
