[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letz"
version = "0.1.0"
description = "lëtz — Luxembourgish spellchecker, normalizer, and LLM context generator. Most LLMs can't spell Luxembourgish. lëtz gives them the rules they need."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Joel Claw" },
]
keywords = ["luxembourgish", "letzebuergesch", "spellchecker", "nlp", "orthography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
letz = "letz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/letz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]